[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/enemies/boss-1.png" type="Texture" id=1]
[ext_resource path="res://assets/enemies/enemy-turret.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/enemies/baltrai-boss.gd" type="Script" id=3]
[ext_resource path="res://assets/explosions/explosion.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/projectiles/laser-red-big.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/projectiles/laser-red.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/projectiles/laser-red-small.tscn" type="PackedScene" id=7]

[sub_resource type="Curve" id=1]
min_value = 1.0
max_value = 5.0
_data = [ Vector2( 0, 5 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 1, 0.447059, 0, 1, 1, 0, 0, 1 )

[node name="Boss" type="Area2D" groups=["enemies"]]
scale = Vector2( 1.5, 1.5 )
z_index = 90
script = ExtResource( 3 )
turrets = [ NodePath("Turrets/T1"), NodePath("Turrets/T2"), NodePath("Turrets/T3"), NodePath("Turrets/T4") ]
l1lasers = [ NodePath("L1Laser/F1"), NodePath("L1Laser/F2"), NodePath("L1Laser/F3"), NodePath("L1Laser/F4"), NodePath("L1Laser/F5"), NodePath("L1Laser/F6") ]
l5lasers_1 = [ NodePath("L5Laser/F1"), NodePath("L5Laser/F4") ]
l5lasers_2 = [ NodePath("L5Laser/F2"), NodePath("L5Laser/F3") ]
l10lasers = [ NodePath("L10Laser/F1"), NodePath("L10Laser/F2") ]
explosion = ExtResource( 4 )
giant_laser = ExtResource( 5 )
big_laser = ExtResource( 6 )
little_laser = ExtResource( 7 )
turret_wait = 0.2
l1laser_wait = 0.06
l5laser_wait = 0.4
l10laser_wait = 0.1
move_speed = 2.5
health = 500

[node name="Collision" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 128, -84.4, 125, -78.5, 125, -67.9, 121.9, -23, 120, -23, 117, -19, 112.5, -19, 109.7, -20.4, 109, -3, 106.8, -3, 102.5, 1.4, 100, 0.300003, 100, -1.2, 99, -2.2, 99, 14.8, 93.8, 20, 91.4, 20, 91, 27.6, 88.1, 32, 84.4, 32, 78, 28.1, 78, 15, 68, 33.6, 68, 42.1, 63.8, 75, 59.4, 75, 53, 71.1, 53, 60, 51.1, 38, 15.8, 38, 12.8, 74, 10.6, 74, 7.10001, 76.3, 5, 75.2, 5, 74, 1, 71, 1, 60.3, 0.100006, 54.9, -1.1, 72, -3.2, 72, -7.5, 76.4, -10, 75.3, -10, 74, -14, 71, -14, 60, -15.9, 38, -51, 38, -51, 42.1, -53.1, 72, -55.2, 72, -59.5, 76.4, -62, 75.3, -62, 74, -66, 71, -66, 60, -67.9, 35, -78, 13.9, -78, 29, -80, 29, -83, 33, -85.5, 33, -89, 31.2, -89, 29, -90.6, 18.8, -92.9, 20.3, -95, 19.2, -95, 18, -99, 15, -99, -1.8, -100.9, 1, -103.8, 1, -109, -4.2, -109, -22, -109.3, -20, -112.7, -20, -118, -18.2, -118, -21, -122, -24, -122, -35, -124.9, -77, -128, -82.5, -128, -96, -100, -96, -68, -90.4, -62, -96, -28.6, -96, -25, -94.2, -25, -91.6, -16.9, -79, -12.7, -79, -2.7, -76, 2.60001, -76, 16.1, -78.7, 28.6, -96, 61.6, -96, 66.9, -90, 69, -90, 69, -90.6, 95.9, -96, 128, -96 )

[node name="Ship" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="L1Laser" type="Node2D" parent="."]

[node name="F1" type="Position2D" parent="L1Laser"]
position = Vector2( -102, -9 )

[node name="F2" type="Position2D" parent="L1Laser"]
position = Vector2( -92, 9 )

[node name="F3" type="Position2D" parent="L1Laser"]
position = Vector2( -85, 25 )

[node name="F4" type="Position2D" parent="L1Laser"]
position = Vector2( 104, -11 )

[node name="F5" type="Position2D" parent="L1Laser"]
position = Vector2( 94, 9 )

[node name="F6" type="Position2D" parent="L1Laser"]
position = Vector2( 84, 22 )

[node name="L5Laser" type="Node2D" parent="."]

[node name="F1" type="Position2D" parent="L5Laser"]
position = Vector2( -58, 68 )

[node name="F2" type="Position2D" parent="L5Laser"]
position = Vector2( -8, 68 )

[node name="F3" type="Position2D" parent="L5Laser"]
position = Vector2( 8, 68 )

[node name="F4" type="Position2D" parent="L5Laser"]
position = Vector2( 61, 68 )

[node name="L10Laser" type="Node2D" parent="."]

[node name="F1" type="Position2D" parent="L10Laser"]
position = Vector2( -114, -31 )

[node name="F2" type="Position2D" parent="L10Laser"]
position = Vector2( 115, -31 )

[node name="Turrets" type="Node2D" parent="."]

[node name="T1" parent="Turrets" instance=ExtResource( 2 )]
position = Vector2( -50, 21 )
scale = Vector2( 0.25, 0.25 )

[node name="T2" parent="Turrets" instance=ExtResource( 2 )]
position = Vector2( 50, 20 )
scale = Vector2( 0.25, 0.25 )

[node name="T3" parent="Turrets" instance=ExtResource( 2 )]
position = Vector2( 102, -75 )
scale = Vector2( 0.25, 0.25 )

[node name="T4" parent="Turrets" instance=ExtResource( 2 )]
position = Vector2( -100, -76 )
scale = Vector2( 0.25, 0.25 )

[node name="E1" type="CPUParticles2D" parent="."]
show_behind_parent = true
position = Vector2( -45, -85 )
amount = 50
randomness = 0.43
lifetime_randomness = 0.87
emission_shape = 2
emission_rect_extents = Vector2( 13, 0 )
direction = Vector2( 0, -1 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 50.0
orbit_velocity = -0.05
linear_accel = -0.1
damping = 0.3
angle = 90.0
scale_amount_curve = SubResource( 1 )
color_ramp = SubResource( 2 )

[node name="E2" type="CPUParticles2D" parent="."]
show_behind_parent = true
position = Vector2( 45, -86 )
amount = 50
randomness = 0.43
lifetime_randomness = 0.87
emission_shape = 2
emission_rect_extents = Vector2( 13, 0 )
direction = Vector2( 0, -1 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 50.0
orbit_velocity = 0.05
linear_accel = -0.1
damping = 0.3
angle = 90.0
scale_amount_curve = SubResource( 1 )
color_ramp = SubResource( 2 )

[node name="T" type="Timer" parent="."]

[node name="L1" type="Timer" parent="."]

[node name="L5" type="Timer" parent="."]

[node name="L10" type="Timer" parent="."]

[connection signal="timeout" from="T" to="." method="_on_T_timeout"]
[connection signal="timeout" from="L1" to="." method="_on_L1_timeout"]
[connection signal="timeout" from="L5" to="." method="_on_L5_timeout"]
[connection signal="timeout" from="L10" to="." method="_on_L10_timeout"]
